--- a/src/components/StudySetForm/studySetForm.scss
+++ b/src/components/StudySetForm/studySetForm.scss
@@ -1,6 +1,7 @@
 @import '../../common/styles/shared';
 
 .study-set-form {
+  margin-bottom: $spacing-48;
   input[type='text'] {
     outline: none;
     border: none;
